@@ -21,26 +21,43 @@ AUTOMAKE_OPTIONS = 1.2 gnits
 
 noinst_LIBRARIES = libnlsut.a
 
-EXTRA_DIST = alloca.c classpath.c config.charset error.c getline.c memset.c \
-memmove.c mkdtemp.c ref-add.sin ref-del.sin setenv.c stpcpy.c stpncpy.c \
-strcasecmp.c strcspn.c strncasecmp.c strpbrk.c strstr.c strtol.c strtoul.c \
-vasprintf.c \
-stdbool.h.in \
-gen-lbrkprop.c 3level.h
+# Sources that are compiled on all platforms.
 
 libnlsut_a_SOURCES = basename.c c-ctype.c concatpath.c execute.c findprog.c \
 fstrcmp.c full-write.c gcd.c getopt.c getopt1.c hash.c javacomp.c javaexec.c \
 linebreak.c localcharset.c mbswidth.c obstack.c pipe-bidi.c pipe-in.c \
-pipe-out.c progname.c safe-read.c sh-quote.c tmpdir.c wait-process.c xerror.c \
-xgetcwd.c xmalloc.c xstrdup.c
+pipe-out.c progname.c sh-quote.c tmpdir.c wait-process.c xerror.c xgetcwd.c \
+xmalloc.c xstrdup.c
+
+libnlsut_a_HEADER = c-ctype.h execute.h findprog.h fstrcmp.h full-write.h \
+gcd.h getopt.h hash.h javacomp.h javaexec.h lbrkprop.h linebreak.h mbswidth.h \
+obstack.h pathmax.h pipe.h progname.h sh-quote.h system.h tmpdir.h \
+utf8-ucs4.h utf16-ucs4.h wait-process.h xerror.h
+
+# Sources that are compiled only on platforms that lack the functions.
+
+LIBADD_SOURCE = alloca.c error.c getline.c memset.c mkdtemp.c setenv.c \
+stpcpy.c stpncpy.c strcasecmp.c strcspn.c strncasecmp.c strpbrk.c strstr.c \
+strtol.c strtoul.c vasprintf.c
+
+LIBADD_HEADER = error.h getline.h mkdtemp.h setenv.h strpbrk.h
+
+# Unused sources.
+
+UNUSED_SOURCE = memmove.c safe-read.c
+
+UNUSED_HEADER = safe-read.h
 
 libnlsut_a_LIBADD = @ALLOCA@ @LIBOBJS@
 
-noinst_HEADERS = c-ctype.h error.h execute.h findprog.h fstrcmp.h \
-full-write.h gcd.h getline.h getopt.h hash.h javacomp.h javaexec.h lbrkprop.h \
-linebreak.h mbswidth.h mkdtemp.h obstack.h pathmax.h pipe.h progname.h \
-safe-read.h setenv.h sh-quote.h strpbrk.h system.h tmpdir.h utf8-ucs4.h \
-utf16-ucs4.h wait-process.h xerror.h
+# List of files to be distributed.
+
+noinst_HEADERS = $(libnlsut_a_HEADER) $(LIBADD_HEADER) $(UNUSED_HEADER)
+
+EXTRA_DIST = classpath.c config.charset ref-add.sin ref-del.sin \
+$(LIBADD_SOURCE) $(UNUSED_SOURCE) \
+stdbool.h.in \
+gen-lbrkprop.c 3level.h
 
 DEFS = -DLIBDIR=\"$(libdir)\" @DEFS@
 INCLUDES = -I. -I$(srcdir) -I.. -I../intl
