@@ -1,3 +1,7 @@
+2001-09-16  Bruno Haible  <haible@clisp.cons.org>
+
+	* configure.in: Don't check for memmove (unneeded).
+
 2001-09-02  Bruno Haible  <haible@clisp.cons.org>
 
 	* configure.in: Add check for 'raise'. Call gt_SIGNALBLOCKING.
